--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Montaga&family=Oxygen&display=swap');
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Oxygen', sans-serif;
 }
+
+
+/*
+    font-family: 'Montaga', serif; headings
+    font-family: 'Oxygen', sans-serif; otherwise
+*/
+
 
 /* Remove the navbar's default margin-bottom and rounded borders */
 
@@ -11,12 +20,14 @@
     border-radius: 0;
 }
 
+
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 
 .content {
     height: 450px;
     display: flex;
 }
+
 
 /* Set gray background color and 100% height */
 
@@ -25,6 +36,7 @@
     background-color: #f1f1f1;
     height: 75vh;
 }
+
 
 /* Set black background color, white text and some padding */
 
@@ -37,6 +49,7 @@ footer {
     padding: 15px;
 }
 
+
 /* On small screens, set height to 'auto' for sidenav and grid */
 
 @media screen and (max-width: 767px) {
@@ -44,7 +57,6 @@ footer {
         height: auto;
         padding: 15px;
     }
-
     .content {
         height: auto;
     }
@@ -85,11 +97,11 @@ h1 {
     text-align: center;
     color: #006600;
     font-size: xx-large;
-    font-family: 'Gill Sans', 'Gill Sans MT',
-        ' Calibri', 'Trebuchet MS', 'sans-serif';
+    font-family: 'Gill Sans', 'Gill Sans MT', ' Calibri', 'Trebuchet MS', 'sans-serif';
 }
 
-td,th {
+td,
+th {
     background-color: white;
     border: 1px solid black;
 }
@@ -106,11 +118,11 @@ td {
     font-weight: lighter;
 }
 
-body{
+body {
     overflow-x: hidden;
 }
 
-.text-left.form{
+.text-left.form {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -118,7 +130,7 @@ body{
     height: inherit;
 }
 
-.username{
+.username {
     background-color: white;
     color: #4b4747;
     font-size: 20px;
@@ -127,7 +139,7 @@ body{
     padding: 10px 20px;
 }
 
-.table{
+.table {
     display: flex;
     justify-content: center;
     margin-top: 20px;
@@ -135,9 +147,50 @@ body{
     height: 100%;
 }
 
-.income.form{
+.income.form {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+}
+
+.arrowImage {
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrowImage>img {
+    position: relative;
+    width: 120px;
+    margin-bottom: 8px;
+    animation-name: leftRight;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes leftRight {
+    0% {
+        left: 0;
+    }
+    50% {
+        left: 20px;
+    }
+    100% {
+        left: 0;
+    }
+}
+
+.arrowMsg {
+    width: 600px;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.noTrans {
+    display: flex;
 }
